@@ -1,4 +1,6 @@
 DIST ultraviolet-0.10.1.gem 348672 RMD160 8446240d839b08954974489f4552559eaac96a23 SHA1 f18ddf55d4b79f511dcf4f96e7c304d42b97eb32 SHA256 754b2527fdb64b091e15834276da0d4000151e04006c92569863f663dddcccf8
+DIST ultraviolet-0.10.2.gem 349184 RMD160 46d1d379a074d9920b933bb5cde8b3aa279923f1 SHA1 22ee216dede5e0b2b9d3085e57e8ecec40d9d876 SHA256 c9f31d140e944a81c7610627df845ae7161010e91bf026403ab6139dc1a71ee9
 EBUILD ultraviolet-0.10.1.ebuild 582 RMD160 4b0853c76f7dc9f4072a25b9bbc3634b66bcfe69 SHA1 5a7930b4566ef82ac890f4f4873dedd0f9785a84 SHA256 f5fa959aff59c0d1bc6f96385bdbd54ae71f02e4c98a7f8faf8f7740fd5f4efc
-MISC ChangeLog 363 RMD160 16d30bc6d3361e434f81e65e1a89cadea628fd2c SHA1 906af08fe9cc6fcad51e3411ef3b5cbe08f8b94f SHA256 b8344125fd9dd4769d55524687f46e919084c46167750473bc6565d97103dfad
+EBUILD ultraviolet-0.10.2.ebuild 582 RMD160 6c28660a71a3b4f9868d910192806ea4d5fdfdb9 SHA1 bfeb6012fdec23e71149710529e80ab8d449c25f SHA256 11a4a829243929214b6e6e213d9a4f1b5c7289cba59cb599af5c57115da31450
+MISC ChangeLog 516 RMD160 17aaf70843b40fa389a357152dc23346a915fc9a SHA1 8f29f8ef570fdcaccf2e199598c4621a47822639 SHA256 56ca45d223f684647969c7f7093bb4df91dbb55c101e3e84de296d8e1d04c3f2
 MISC metadata.xml 157 RMD160 5d9e2c7ecba96ffebd936d38acedf859cdea84e1 SHA1 8ce15dcc608eeb5616aeec610dc695cbe6f93e02 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c
