@@ -1,6 +1,12 @@
 # ChangeLog for dev-ruby/ultraviolet
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ultraviolet/ChangeLog,v 1.1 2007/06/19 01:38:51 nichoj Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ultraviolet/ChangeLog,v 1.2 2009/06/28 08:14:33 graaff Exp $
+
+*ultraviolet-0.10.2 (28 Jun 2009)
+
+  28 Jun 2009; Hans de Graaff <graaff@gentoo.org>
+  +ultraviolet-0.10.2.ebuild:
+  Version bump with minor bug fixes.
 
 *ultraviolet-0.10.1 (19 Jun 2007)
 
